--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,5 +2,7 @@
 //font-family: 'Open Sans', sans-serif;
 @import "libs/normalize/normalize";
 @import "libs/fontawesome/font-awesome";
+@import "misc/_vars.scss";
 @import "misc/_mixin.scss";
 @import "misc/_adjustment.scss";
+@import "layout/_price.scss";
