--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet');
+//font-family: 'Open Sans', sans-serif;
 @import "libs/normalize/normalize";
 @import "libs/fontawesome/font-awesome";
 @import "misc/_mixin.scss";
 @import "misc/_adjustment.scss";
+@import "../scss/layout/_diagramm.scss";
