--- a/src/scss/misc/_mixin.scss
+++ b/src/scss/misc/_mixin.scss
@@ -1,6 +1,6 @@
 
 @mixin container{
-    width: 1200px;
+    width: 940px;
     margin: 0 auto;
     padding: 0 15px;
 
@@ -26,5 +26,11 @@
 @mixin flexCenter{
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+@mixin flex{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
