Add inform section(Max)

--- a/src/scss/misc/_adjustment.scss
+++ b/src/scss/misc/_adjustment.scss
@@ -12,8 +12,12 @@ html, body{
 body{
     display: flex;
     flex-direction: column;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .maincontent{
     flex-grow: 1;
 }
+
+
+
