--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,3 +6,4 @@
 @import "misc/_mixin.scss";
 @import "misc/_adjustment.scss";
 @import "layout/_price.scss";
+@import "layout/_photo_desktop_preview.scss";
