--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,4 @@
 @import "misc/_mixin.scss";
 @import "misc/_adjustment.scss";
 @import "../scss/layout/_diagramm.scss";
+@import "../scss/layout/_testimonial.scss";
