--- a/src/scss/layout/_heder.scss
+++ b/src/scss/layout/_heder.scss
@@ -15,6 +15,7 @@
             @include flex;
             padding: 27px 0 42px 0;
             
+            
         }
 
         .logo {
@@ -33,17 +34,82 @@
             }
 
                 .nav__item {
+                    position: relative;
                     margin-right: 80px;
+                    
                     &:last-child {
                         margin-right: 0px;
                     }
                 }
+                .nav__item::before {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 0;
+                    height: 2px;
+                    background: $colorAccent;
+                    transition: width .2s ease-in-out;
+                }
+
+               
 
                 .nav__link {
+                    padding: 8px 0;
+                    display: block;
                     text-decoration: none;
                     font-family: $defolt-fonts;
                     color: #ffffff;
                     font-size: 1.125rem;
                     font-weight: 400;
                     line-height: 1.125rem; 
+                    transition: color .2s ease-in-out;
                 }
+                .nav__link:hover  {
+                    color: $colorAccent;
+                }
+                .nav__link:active {
+                    color: $colorClick;
+                }
+                .nav__item:hover.nav__item::before {
+                    width: 100%;
+                }
+
+/***
+*
+* RESPONSIVE MENU
+*
+***/
+
+.label-nav,
+.label-nav--closed {
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+    position: absolute;
+    right: 40px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.label-nav:hover {
+    color: $colorAccent;
+}
+
+.label-nav--closed:hover {
+    color: $colorAccent;
+}
+
+.label-nav:active {
+    color: $colorClick;
+}
+
+.label-nav--closed:active {
+    color: $colorClick;
+}
+
+
+.input-nav {
+    display: none;
+}
