--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -7,54 +7,56 @@
     position: relative;
 }
 
-.container {
-    @include container;
-}
-
-.intro-desr {
-    max-width: 303px;
-    text-align: center;
-}
-
-    .intro-desr__title {
-        color: #ffffff;
-        font-size: 3.125rem;
-        font-weight: 300;
-        padding: 0;
-        margin: 0 0 61px 0;
+    .container {
+        @include container;
     }
 
-.attachment {
-    margin: 0 auto 63px;
-}
+        .intro-desr {
+            max-width: 303px;
+            text-align: center;
+            position: relative;
+            z-index: 99;
+        }
 
-.intro-desr-text {
-    color: #ffffff;
-    font-size: 1.125rem;
-    font-weight: 300;
-    line-height: 1.5rem;
-}
+            .intro-desr__title {
+                color: #ffffff;
+                font-size: 3.125rem;
+                font-weight: 300;
+                padding: 0;
+                margin: 0 0 61px 0;
+            }
 
-.btn-download {
-    margin: 0 0 75px 0;
-}
+        .attachment {
+            margin: 0 auto 63px;
+        }
 
-.intro-iphone {
-    background: url('../img/iphone.png')center center no-repeat;
-    background-size: cover;
-    width: 1050px;
-    height: 645px;
-    position: absolute;
-    bottom: 0;
-    right: 4px;
-}
+        .intro-desr-text {
+            color: #ffffff;
+            font-size: 1.125rem;
+            font-weight: 300;
+            line-height: 1.5rem;
+        }
 
-.photo-iphone {
-    background: url('../img/photo-iphone.png')center center no-repeat;
-    background-size: cover;
-    width: 230px;
-    height: 408px;
-    position: absolute;
-    top: 64px;
-    right: 250px;
-}
+        .btn-download {
+            margin: 0 0 75px 0;
+        }
+
+        .intro-iphone {
+            background: url('../img/iphone.png')center center no-repeat;
+            background-size: cover;
+            width: 1050px;
+            height: 645px;
+            position: absolute;
+            bottom: 0;
+            right: 4px;
+        }
+
+            .photo-iphone {
+                background: url('../img/photo-iphone.png')center center no-repeat;
+                background-size: cover;
+                width: 230px;
+                height: 408px;
+                position: absolute;
+                top: 64px;
+                right: 250px;
+            }
