--- a/src/scss/layout/components/_btn-download.scss
+++ b/src/scss/layout/components/_btn-download.scss
@@ -1,11 +1,24 @@
-.btn-download {
+
+.btn__link {
+    padding: 14px 30px;
+    border: 3px solid #fff;
+    border-radius: 50px;
+    text-decoration: none;
+    display: block;
     color: #ffffff;
     font-family: "Open Sans";
     font-size: 1.313rem;
     font-weight: 700;
     line-height: 1.125rem;
-    padding: 14px 30px;
-    border: 3px solid #fff;
-    border-radius: 50px;
-    cursor: pointer;
+    transition: color .2s ease-in-out,
+                background .2s ease-in-out;
+}
+
+.btn__link:hover {
+    background: #fff;
+    color: $colorAccent;
+}
+
+.btn__link:active {
+    color: $colorClick;
 }
