Denis added the sv changes

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,3 +1,9 @@
+.logo-footer--bg {
+    background: url('../img/tablet-img/logotype-blue-tablet-svg.svg') center center no-repeat;
+    background-size: cover;
+    width: 147px;
+    height: 40px;
+}
 .main-footer {
     padding: 70px 0;
 }
