--- a/src/scss/misc/_mixin.scss
+++ b/src/scss/misc/_mixin.scss
@@ -1,4 +1,4 @@
-
+// Центрующий контейнер
 @mixin container{
     width: 940px;
     margin: 0 auto;
@@ -23,14 +23,43 @@
     line-height: $font + 2px;
 }
 
+// Флекс контейнер отцентрованный
 @mixin flexCenter{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+// Флекс контейнер растянутый по бокам
 @mixin flex{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+// Флекс контейнер колоночный
+@mixin flexColumn{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+// Заглавный текст красный цвет
+@mixin textAccent {
+    color: $colorAccent;
+    font-family: "Open Sans";
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.875rem;
+    text-transform: uppercase;
+}
+
+// Текст на странице, черный
+@mixin textDefolt {
+    color: #283645;
+    font-family: "Open Sans";
+    font-size: 1.125rem;
+    font-weight: 400;
+    line-height: 1.875rem;
 }
