--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,8 @@
 //font-family: 'Open Sans', sans-serif;
 @import "libs/normalize/normalize";
 @import "libs/fontawesome/font-awesome";
+@import "misc/_vars.scss";
 @import "misc/_mixin.scss";
 @import "misc/_adjustment.scss";
-@import "../scss/layout/_diagramm.scss";
+@import "layout/_diagramm.scss";
+@import "layout/_testimonial.scss";
