--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -89,7 +89,12 @@
                         margin: 30px auto 0 auto;
                     }
 
-            .map{
-                margin: 0 auto;
-                display: block;
-            }        
+                    .iframe-overlay {
+                        background:transparent; 
+                        position:relative; 
+                        width:100%;
+                        height:750px; /* your iframe height */
+                        top:750px;  /* your iframe height */
+                        margin-top:-750px;  /* your iframe height */
+}
+           
