disable mediaqueries in _mixin.scss (add to comment)

--- a/src/scss/misc/_mixin.scss
+++ b/src/scss/misc/_mixin.scss
@@ -4,7 +4,7 @@
     margin: 0 auto;
     // padding: 0 15px;
 
-    @media screen and (max-width:1210px){
+   /*  @media screen and (max-width:1210px){
         width: 970px;
 
     }
@@ -15,7 +15,7 @@
 
     @media screen and (max-width:768px){
         width: auto;
-    }
+    } */
 }
 
 @mixin size ($font){
