--- a/src/scss/layout/components/_buttons.scss
+++ b/src/scss/layout/components/_buttons.scss
@@ -40,7 +40,7 @@
     &:hover{
         background-color: #1c9b5e;
     }
-    &::active{
+    &:active{
         color: rgba(255, 255, 255, 0.3);
     }
 }
