--- a/src/scss/misc/_responsive.scss
+++ b/src/scss/misc/_responsive.scss
@@ -1,81 +1,169 @@
-@media screen and (max-width: 1220px) {
+/*
+ @media screen and (max-width: 1220px) {
     .container {
       width: 992px;
     }
+} 
+@media screen and (max-width:1210px){
+    * {
+        width: 970px;
+    }
+    
+} 
+@media screen and (max-width:992px){
+    * {
+        width: 750px;
+    }
 }
+
+@media screen and (max-width:768px){
+    * {
+        width: auto;
+    }
+}
+*/
+
+/***=== SCREEN 1102px ===***/
 
 @media screen and (max-width: 1102px) {
     
-        .container {
-          width: 768px;
+    .container {
+        width: 720px;
+    }
+
+    /***
+    *
+    * HEADER NAVIGATION
+    *
+    ***/
+
+    .header-nav {
+        width: 535px;
+    }
+
+    .nav__item {
+        position: relative;
+        margin-right: 50px;
+        
+        &:last-child {
+            margin-right: 0px;
+        }
+    }
+
+    .form-preview__title {
+        max-width: 650px;
+    }
+
+    .form-desc {
+        width:90%; 
+    }
+        .form__personal-info {
+            @include flexColumn;
+        }
+    
+        .form-name,
+        .attachment-form {
+            width: 100%;
+            padding: 0;
+            margin-bottom: 60px;
+        }
+
+        .achievements {
+            margin: -23.5px 0;
         }
 }
 
-@media screen and (max-width: 710px) {
+@media screen and (max-width: 890px) {
+    .intro-iphone {
+        width: 900px;
+    }
+
+    .photo-iphone {
+        right: 175px;
+    }
+}
+
+/***=== SCREEN 710px ===***/
+
+@media screen and (max-width: 760px) {
     
-        .container{
-          width: 620px;
-          
-        }
-        .label-nav {
-            display: block;
-            z-index: 104;
-        }
+    .container{
+        width: 620px;
+        padding: 0 15px;
+        
+    }
 
-        .logo-header--bg {
-            background: url('../img/tablet-img/logotype-white-tablet-svg.svg') center center no-repeat;
-            background-size: cover;
-            width: 147px;
-            height: 40px;
-            position: relative;
-            z-index: 105;
-        }
+    .label-nav {
+        display: block;
+        z-index: 104;
+    }
 
+    /*logo*/
+    .logo-header--bg {
+        background: url('../img/tablet-img/logotype-white-tablet-svg.svg') center center no-repeat;
+        background-size: cover;
+        width: 147px;
+        height: 40px;
+        position: relative;
+        z-index: 105;
+    }
 
-        /*responsive nav*/
-        .main-header  {
-            background: none;
-            
-        }
+    /***
+    *
+    * RESPONSIVE NAVIGATION
+    *
+    ***/
 
-        .header-nav {
-            width: 100%;
-            background: #283645;
-            padding-top: 109px;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 100;
-            transform: translateY(-200%);
-            transition: transform .5s ease-in-out;
-        }
-        .nav__list {
-            flex-direction: column;
-            
-        }
-        .nav__item {
-            border-bottom: 1px solid #000;
-            border-top: 1px solid #485461;
-            width: 100%;
-            margin: 0;
-            text-align: center;
-            
-        }
+    /*responsive nav*/
 
-        .nav__item:hover {
-            border-bottom: 1px solid #000;
-            border-top: 1px solid #000;
-            color: $colorAccent;
-        }
+    .main-header  {
+        background: none;
+    }
 
-        .nav__link {
-            
-            display: block;
-            padding: 25px 0;
-            text-transform: uppercase;
-            transition: border .2s ease-in-out,
-                        color .2s ease-in-out;
-        }
+    .nav__item::before {
+        height: 0;
+    }
+
+    .header-nav {
+        width: 100%;
+        background: #283645;
+        padding-top: 109px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        transform: translateY(-200%);
+        transition: transform .5s ease-in-out;
+    }
+
+    .nav__list {
+        flex-direction: column;
+        
+    }
+
+    .nav__item {
+        border-bottom: 1px solid #000;
+        border-top: 1px solid #485461;
+        width: 100%;
+        margin: 0;
+        text-align: center;
+        
+    }
+
+    .nav__item:hover {
+        border-bottom: 1px solid #000;
+        border-top: 1px solid #000;
+        color: $colorAccent;
+    }
+
+    .nav__link {
+        
+        display: block;
+        padding: 25px 0;
+        text-transform: uppercase;
+        transition: border .2s ease-in-out,
+                    color .2s ease-in-out;
+    }
 
         .input-nav:checked ~  .header-nav {
             transform: translateY(0);
@@ -90,59 +178,400 @@
         }
 
         .input-nav:checked ~  .main-header {
-           display: none;
+            display: none;
         }
+
+    /***
+    *
+    * INTRO
+    *
+    ***/   
+
     .intro {
         padding: 213px 0 110px 0; 
     }
+
     .intro-desr__title {
         font-size: 2.5rem;
         margin: 0 0 31px 0;
     }
+
     .btn-download {
         margin: 0 0 52px 0;
     }
+
     .attachment {
         margin: 0 auto 44px;
     }
+
     .intro-iphone {
         width: 700px;
         height: 545px;
     }
+
     .photo-iphone {
         width: 195px;
         height: 347px;
         top: 53px;
         right: 118px;
     }
+
+    /***
+    *
+    * ACHIVEMENTS FORM
+    *
+    ***/
+
+    .achievements {
+        padding: 40px;
+        margin: 0;
+    }
+
+    .input-achievements {
+        margin: 0 0 47px 0;
+            &:first-child {
+                margin-top: 42px;
+            }
+            &:last-child {
+                margin: 0;
+            }
+    }
+
+    /***
+    *
+    * FOOTER
+    *
+    ***/
+
     .main-footer {
-        padding: 35px 0;
+        padding: 88px 0 51px 0;
     }
+
+    /***
+    *
+    * FORM PAGE
+    *
+    ***/
+
+    .form-preview__title {
+        width: 470px;
+    }
+
+    .form-desc {
+        width: 490px;
+    }
+
+    /*personal form*/
+    
+    .form__personal-info {
+        @include flexColumn;
+    }
+
+    .form-name,
+    .attachment-form {
+        width: 100%;
+        padding: 0;
+        margin-bottom: 60px;
+    }
+
+    /*contacts form*/
+
+    .contacts, {
+        @include flexColumn;
+    }
+
+    .phone-number,
+    .email {
+        width: 100%;
+        padding: 0;
+    }
+
+    .phone-number {
+        margin-bottom: 40px;
+    }
+    .input-tel,
+    .input-email {
+        width: 100%;
+    }
+
+    /***
+    *
+    * ACHIVEMENTS FORM
+    *
+    ***/
+
+    .achievements {
+        @include flexColumn;
+        align-items: stretch;
+    }
+
+    /***
+    *
+    * SUBMIT FORM
+    *
+    ****/
+
+    .delete-text {
+        display: none;
+    }
+    
 }
 
-@media screen and (max-width: 600px) {
+/***=== SCREEN 600px ===***/
+
+@media screen and (max-width: 655px) {
+
     .container {
       width: 100%;
+      padding: 0 20px;
     }
+      
+    .form-desc {
+        width: 80%;
+    }
+
+    .form-preview__title {
+        width: 90%;
+        font-size: 2.5rem;
+    }
+
+    /***
+    *
+    * SUBMIT FORM
+    *
+    ****/
+
+    .submit {
+        @include flexColumn;
+    }
+
+    /****
+    *
+    * FOOTER HOM PAGE
+    *
+    ***/
+
+    .footer__home-page {
+        display: none;
+    }
+
+    .btn-sibmit {
+        margin-bottom: 46px;
+    }
+
+    /***
+    *
+    * FOOTER FORM PAGE
+    *
+    ***/
+
+    .footer__form-page {
+        padding: 64px 0 0 0;
+    }
+
+    .footer-content {
+        @include flexColumn;
+    }
+
+    .logo-footer--bg,
+    .social__list {
+        margin-bottom: 42px;
+    }
+
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 410px) {
     .container {
       width: 100%;
+      padding: 0;
     }
+
+    /***
+    *
+    * FORM HEADER
+    *
+    ***/
+
+    fieldset {
+        border: none;
+    }
+
+    .form-preview {
+        padding: 102px 0 53px 0; 
+    }
+
+    .form-heder {
+        padding: 54px 0 49px 0; 
+    }
+
+    .dellete__text-heder {
+        display: none;
+    }
+
+    .form-preview__title {
+        font-size: 1.5rem;
+    }
+
+    /***
+    *
+    * INTRO
+    *
+    ***/
+
+    .intro {
+        @include flexColumn;
+        padding: 176px 0 0 0;
+    }
+
     .intro-iphone {
-        width: 320px;
+        position: relative;
+        transform: translateX(-15%);
+        width: 350px;
         height: 314px;
+        order: -1;
     }
+
     .photo-iphone {
         width: 111px;
         height: 197px;
         top: 32px;
-        right: 27px;
-    }
-    .main-footer {
-        display: none;
+        right: 42px;
     }
 
+    .intro-desr {
+        max-width: 100%;
+        padding: 28px 20px 0 20px;
+        background: #283645;
+        &__title {
+            display: none;
+        }
+        &-text {
+            margin: 0;
+            font-family: "Open Sans";
+            font-size: 0.875rem;
+            font-weight: 300;
+            line-height: 1.5rem;
+        }
+
+    .btn-download {
+        margin: 0 0 35px 0;
+    }
+
+    .attachment {
+        margin: 0 auto 30px;
+    }
+    
+    .btn__link {
+        font-size: 1.125rem;
+    }
 }
 
+    /***
+    *
+    * FORM PERSONAL
+    *
+    ***/
+
+    .name,
+    .fullname,
+    .middlename {
+        @include flexColumn; 
+        align-items: stretch;
+        width: 100%; 
+    }
+
+    .form-name {
+        padding: 0 20px;
+        margin-bottom: 45px;
+    }
+    .input-size {
+        width: 100%;
+    }
+
+    .fullname-label {
+        padding-left: 20px; 
+    }
+
+    /***
+    *
+    * ATTACHMENT FORM
+    *
+    ***/
+
+    .attachment-form {
+        background: #f2f2f2;
+        padding: 40px 0 45px 0;
+    }
+    .input-attachment__wrap {
+        padding: 40px 0 55px 20px;
+    }
+
+    /***
+    *
+    * CONTACTS INFO
+    *
+    ***/
+
+    .dellete-legend {
+        display:none; 
+    }
+    .contacts {
+        padding:0 20px;
+    }
+
+    .input-tel::before,
+    .input-email::before {
+        display: none;
+    }
+    .label-phone,
+    .label-email {
+        order: -1;
+    }
+
+
+    /***
+    *
+    * ACHIVEMENTS FORM
+    *
+    ***/
+
+    .achievements-form {
+        background: #f2f2f2;
+        padding: 40px 0 45px 0;
+        margin: 0;
+    }
+    .achievements {
+        padding: 0 20px;
+    }
+    
+
+    /***
+    *
+    * EMOTION FORM
+    *
+    ***/
+
+    .emotions-form {
+        margin: 60px 20px 51px 20px;
+    }
+
+    fieldset {
+       border: none;
+    }
+
+    .emotions {
+        padding: 0;
+        margin-top: 20px;
+    }
+
+    .attachment-form {
+        order: 5;
+    }
+    textarea {
+        height: 197px;
+    }
+
+    .submit-button {
+        padding: 22.5px 45px;
+    }
+}
