--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -15,7 +15,9 @@
             @include flex;
             padding: 27px 0 42px 0;
         }
-
+        .logo-header{
+            @include center-logo;
+        }
         .logo-header--bg {
             background: url('../img/logotype-white-desktop.png') center center no-repeat;
             background-size: cover;
