--- a/src/scss/misc/_mixin.scss
+++ b/src/scss/misc/_mixin.scss
@@ -59,3 +59,8 @@
     font-weight: 400;
     line-height: 1.875rem;
 }
+//inclination for logo in header and footer
+@mixin center-logo{
+    position: relative;
+    top: -8px;
+}
